@@ -1,4 +1,4 @@
-.\" RCSid $Id: genssky.1,v 1.2 2024/07/19 23:38:28 greg Exp $
+.\" RCSid $Id: genssky.1,v 1.3 2024/08/02 18:47:25 greg Exp $
 .TH "GENSSKY" "1" "8/31/24" "RADIANCE" ""
 .SH "NAME"
 genssky - generates a RADIANCE description of the spectral daylight sources
@@ -56,10 +56,10 @@ Non-clear conditions are modeled by linearly interpolating between clear sky and
 \fB-o	     Longitude in degree, west positive. Used to calculated solar angle.
 .br
 
-\fB-p	     Set directory to store the precomputed atmopsheric data directory, default=current working directory.
+\fB-p	     Set directory to store the hyperspectral image and precomputed atmopsheric data directory, default=current working directory.
 .br
 
-\fB-r	     Sky and ground hyperspectral image resolution. default=128. Increase this value to reduce artifacts at horizon.
+\fB-r	     Sky hyperspectral image x resolution. default=128. y resolution is half of x resolution.
 .br
 
 \fB-y	     Set year to invoke a more accurate algorithm to calculate solar angles, default=0.
