@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.90 2022/03/06 16:27:55 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.91 2024/08/02 18:47:25 greg Exp $
 #
 # Makefile for ray tracing library routines
 #
@@ -24,7 +24,7 @@ PICOBJ = color.o header.o image.o lamps.o resolu.o rexpr.o spec_rgb.o \
 	idmap.o fltdepth.o jitteraperture.o
 
 UTLOBJ = ezxml.o ccolor.o ccyrgb.o bsdf.o bsdf_m.o bsdf_t.o loadbsdf.o \
-	disk2square.o hilbert.o interp2d.o triangulate.o
+	disk2square.o hilbert.o interp2d.o triangulate.o data.o
 
 STDOBJ = fgetline.o fropen.o linregr.o xf.o mat4.o invmat4.o fvect.o urand.o \
 	urind.o calexpr.o caldefn.o calfunc.o calprnt.o biggerlib.o multisamp.o \
@@ -124,7 +124,7 @@ readobj.o readoct.o sceneio.o:	otypes.h
 
 multisamp.o urand.o:	random.h
 
-cone.o face.o free_os.o instance.o objset.o \
+cone.o data.o face.o free_os.o instance.o objset.o \
 octree.o modobject.o readfargs.o otypes.o mesh.o \
 readmesh.o readobj.o readoct.o sceneio.o:	standard.h \
 rtmisc.h rtio.h rtmath.h rterror.h fvect.h mat4.h tiff.h
@@ -220,6 +220,8 @@ g3affine.o g3sphere.o:	g3sphere.h
 g3flist.o:	g3flist.h
 
 maxheap.o:	maxheap.h
+
+data.o:	data.h platform.h paths.h color.h view.h resolu.h
 
 ezxml.o readmesh.o readobj.o readoct.o rglinst.o wordfile.o:	platform.h
 
