@@ -17,9 +17,11 @@ target_link_libraries(genmarble ${LIB_M})
 add_executable(gensky gensky.c sun.c)
 target_link_libraries(gensky rtrad ${LIB_M})
 
-
-add_executable(genssky genssky.c sun.c atmos.c ../rt/data.c)
+add_executable(genssky genssky.c sun.c atmos.c)
 target_link_libraries(genssky rtrad ${LIB_M} Threads::Threads)
+
+add_executable(gensdaymtx gensdaymtx.c sun.c atmos.c)
+target_link_libraries(gensdaymtx rtrad ${LIB_M} Threads::Threads)
 
 add_executable(gendaylit gendaylit.c sun.c)
 target_link_libraries(gendaylit rtrad ${LIB_M})
