@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.43 2024/07/05 18:04:36 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.44 2024/08/02 18:47:25 greg Exp $
 #
 # Makefile for object generation programs
 #
@@ -16,10 +16,10 @@ INSTDIR = /usr/local/bin
 LIBDIR = /usr/local/lib/ray
 
 PROGS = genbox gensky xform genblinds genrev genworm gendaylit gendaymtx \
-		gensurf genprism replmarks mkillum mksource genclock genssky
+		gensurf genprism replmarks mkillum mksource genclock genssky gensdaymtx
 
 LIBFILES = illum.cal rev.cal skybright.cal surf.cal clockface.hex \
-		glaze1.cal glaze2.cal perezlum.cal perezlum_c.cal mie_ca.dat
+		glaze1.cal glaze2.cal perezlum.cal perezlum_c.cal
 
 all:	$(PROGS)
 
@@ -91,8 +91,12 @@ genbranch:	genbranch.o
 
 
 # Assume rt is built before this
-genssky:	genssky.o sun.o ../rt/data.o atmos.o
-	$(CC) $(CFLAGS) -o genssky genssky.o ../rt/data.o sun.o atmos.o -lrtrad $(MLIB)
+genssky:	genssky.o sun.o atmos.o
+	$(CC) $(CFLAGS) -o genssky genssky.o sun.o atmos.o -lrtrad $(MLIB)
+
+gensdaymtx:	gensdaymtx.o sun.o atmos.o
+	$(CC) $(CFLAGS) -o gensdaymtx gensdaymtx.o sun.o atmos.o -lrtrad $(MLIB)
+
 
 mksource.o:	../common/random.h ../rt/ray.h ../common/octree.h \
 ../common/object.h ../common/color.h \
@@ -133,6 +137,8 @@ gendaylit.o gensky.o sun.o:	sun.h
 gendaymtx.o:	../common/platform.h ../common/rtmath.h \
 ../common/mat4.h ../common/fvect.h ../common/color.h
 
-genssky.o: ../common/rtio.h ../common/rtmath.h ../common/paths.h ../common/color.h
+genssky.o: ../common/rtio.h ../common/rtmath.h \
+../common/paths.h ../common/color.h
 
-atmos.o: ../common/rtio.h ../common/rtmath.h ../common/color.h ../rt/data.h sun.h
+atmos.o: ../common/rtio.h ../common/rtmath.h ../common/color.h \
+../common/data.h sun.h
